# mad

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  devenv.nix  devenv.yaml  flake.nix  release-plz.toml
.github/workflows/: ci.yml  nix.yml  release-mad.yml  release-plz.yml
crates/ansi-term-styles/: CHANGELOG.md  Cargo.toml  README.md
crates/ansi-term-styles/src/: lib.rs
crates/mad/: CHANGELOG.md  Cargo.toml  README.md
crates/mad/src/: main.rs
crates/mad/tests/: cli.rs
crates/markdown-to-ansi/: CHANGELOG.md  Cargo.toml  README.md
crates/markdown-to-ansi/src/: highlight.rs  lib.rs  render.rs  wrap.rs
crates/sublime-syntaxes/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/sublime-syntaxes/src/: lib.rs
nix/: packages.nix
screenshots/: code-example.md  demo.md  table-example.md
scripts/: generate-screenshots
