[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/macalinao/mad"
license = "Apache-2.0"
authors = ["Ian Macalinao <me@ianm.com>"]
homepage = "https://github.com/macalinao/mad"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
complexity = { level = "deny", priority = -1 }
must_use_candidate = "allow"
unwrap_used = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
cognitive_complexity = "deny"
too_many_lines = "deny"
