[package]
name = "ansi-term-styles"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "ANSI terminal escape code constants for styling text"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ansi", "terminal", "escape-codes", "no-std"]
categories = ["no-std", "command-line-utilities"]

[lints]
workspace = true
