[package]
name = "ansi-term-styles"
version = "0.1.0"
authors.workspace = true
categories = ["no-std", "command-line-utilities"]
edition.workspace = true
homepage.workspace = true
keywords = ["ansi", "terminal", "escape-codes", "no-std"]
license.workspace = true
repository.workspace = true
description = "ANSI terminal escape code constants for styling text"

[lints]
workspace = true
