[package]
name = "mad"
version = "0.1.1"
authors.workspace = true
categories = ["command-line-utilities", "text-processing"]
edition.workspace = true
homepage.workspace = true
keywords = ["markdown", "terminal", "ansi", "cli", "renderer"]
license.workspace = true
repository.workspace = true
description = "A fast Markdown terminal renderer with syntax highlighting"

[lints]
workspace = true

[dependencies]
bpaf = { version = "0.9", features = ["derive", "bright-color", "dull-color", "docgen", "autocomplete"] }
markdown-to-ansi = { version = "0.2.1", path = "../markdown-to-ansi" }
terminal_size = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
