[package]
name = "markdown-to-ansi"
version = "0.2.2"
authors.workspace = true
categories = ["command-line-utilities", "text-processing"]
edition.workspace = true
homepage.workspace = true
keywords = ["markdown", "ansi", "terminal", "cli"]
license.workspace = true
repository.workspace = true
description = "Render Markdown as ANSI-formatted terminal text"

[lints]
workspace = true

[dependencies]
ansi-term-styles = { version = "0.1.1", path = "../ansi-term-styles" }
pulldown-cmark = { version = "0.13", default-features = false }
sublime-syntaxes = { version = "0.2.1", path = "../sublime-syntaxes" }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
