[package]
name = "sublime-syntaxes"
version = "0.2.1"
authors.workspace = true
categories = ["text-processing"]
edition.workspace = true
homepage.workspace = true
keywords = ["syntax-highlighting", "syntect", "sublime-syntax"]
license.workspace = true
repository.workspace = true
description = "Precompiled Sublime Text syntax definitions for languages not in syntect's defaults"

[lints]
workspace = true

[dependencies]
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "regex-fancy"] }

[build-dependencies]
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "regex-fancy", "yaml-load"] }
